2009-11-01  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/sh-script.el (sh-font-lock-paren): Fix last change.

2009-11-01  Andreas Schwab  <schwab@linux-m68k.org>

	* view.el (view-mode-exit): If OLD-BUF is dead bury the buffer
	instead of deleting the window or frame.

2009-10-31  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/sgml-mode.el (sgml-mode-facemenu-add-face-function):
	Support face colors.

	* textmodes/tex-mode.el (tex-facemenu-add-face-function): New
	function.  Support face colors (Bug#1168).
	(tex-common-initialization): Use it.

	* facemenu.el (facemenu-enable-faces-p): Enable facemenu if the
	mode allows it (Bug#1168).

2009-10-31  Juri Linkov  <juri@jurta.org>

	* facemenu.el (list-colors-display): Don't mark buffer as
	modified (Bug#3948).

2009-10-31  Chong Yidong  <cyd@stupidchicken.com>

	* international/mule-diag.el (list-character-sets-1): Minor
	message fix (Bug#3526).

	* progmodes/etags.el (etags-list-tags, etags-tags-apropos): Fix
	face property (Bug#4834).
	(etags-list-tags, etags-tags-apropos-additional)
	(etags-tags-apropos, tags-select-tags-table): Add follow-link
	property.

	* menu-bar.el (menu-bar-tools-menu): Add Semantic and EDE menu
	items.

	* cedet/cedet.el (cedet-menu-map): Remove Semantic and EDE menu
	items.

	* cedet/ede.el (ede-minor-mode):
	* cedet/semantic.el (semantic-mode): Toggle menu separators.

2009-10-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/two-column.el (2C-split):
	* textmodes/texnfo-upd.el (texinfo-multi-file-included-list):
	* textmodes/tex-mode.el (tex-set-buffer-directory):
	* textmodes/spell.el (spell-region, spell-string):
	* textmodes/reftex.el (reftex-erase-buffer):
	(reftex-get-file-buffer-force, reftex-kill-temporary-buffers):
	* textmodes/reftex-toc.el (reftex-toc-promote-action):
	* textmodes/reftex-sel.el (reftex-get-offset, reftex-insert-docstruct)
	(reftex-select-item):
	* textmodes/reftex-ref.el (reftex-label-info-update)
	(reftex-offer-label-menu):